app/styles/partials/jump-to.scss
.jump-to {
  a {
    display: block;
    text-align: center;
    text-transform: uppercase;
    font-family: Futura PT;
    font-size: 18px;
    font-weight: 600;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: normal;
    color: #191919;
    margin-top: 25px;
    margin-bottom: 25px;
    &:hover {
      color: $orange;
    }
    &:last-child {
      margin-bottom: 0;
    }
  }
  @media (min-width: $screen-md-min) {
    display: flex;
    justify-content: space-between;
    margin-top: 40px;
    a {
      display: inline;
      text-align: left;
      margin: 0;
    }
  }
}

